# geometry-kernal

./: CAD.stp  CMakeLists.txt  box1.brep  box2.brep  box33.brep  box34.brep  e1.brep  e2.brep  e3.brep  pp.brep  shape  shape.brep  shape.stp
include/: primitive.h  tool.h  transform.h
src/: main.cpp
src/prim/: primitive.cpp
src/tool/: tool.cpp
src/transform/: transform.cpp
test/: test.cpp  test.h
